--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-    <h1 id="welcome" style="color: #631889;">Welcome to My Website!!!</h1>
+    <h1 id="welcome" style="color: #858907;">Welcome to My Website!!!</h1>
     <p>Thank you for visiting. Enjoy your stay!</p>
+    <p>Practice CI/CD with Jenkins</p>
 
     <form action="/api/login" method="POST">
         <label for="username">Username:</label>
